--- a/CSCELearning/CSCELearning/Web.config
+++ b/CSCELearning/CSCELearning/Web.config
@@ -19,4 +19,10 @@
 
   </appSettings>
   
+  <configuration>
+    <system.web>
+        <customErrors mode="Off"/>
+    </system.web>
+  </configuration>
+  
 </configuration>
